Add Java 21 Virtual Thread support and JMH benchmark suite
Phase 1: Virtual Thread Integration
- Create VirtualThreadSupport utility class with eureka.virtualThreads.enabled toggle
- Refactor TimedSupervisorTask from ThreadPoolExecutor to ExecutorService abstraction
- Convert TaskExecutors workers to use virtual threads when enabled
- Convert AwsAsgUtil cache reload executor to virtual threads when enabled
- Update DiscoveryClient heartbeat/cacheRefresh executors for virtual threads
- Update AsyncResolver executor for virtual threads
- Update RemoteRegionRegistry fetch executor for virtual threads
- Replace synchronized blocks with ReentrantLock in Application.java (5 methods)
- Replace synchronized blocks with ReentrantLock in AbstractInstanceRegistry.java (2 methods)

Phase 2: JMH Benchmark Suite
- Add JMH 1.37 dependencies and jmh Gradle task
- Create SimulatedIOProcessor for realistic I/O simulation
- Benchmark 1: TaskExecutors worker throughput (platform vs virtual)
- Benchmark 2: AwsAsgUtil concurrent lookup simulation
- Benchmark 3: TimedSupervisorTask compatibility verification
- Benchmark 4: End-to-end replication pipeline
- Benchmark 5: Pinning detection (ReentrantLock vs synchronized)
- Benchmark 6: Memory and scalability at scale
- Add benchmark runner script (scripts/run-benchmarks.sh)
- Add benchmark results documentation template

Co-Authored-By: Ian Carter <iancarter212@gmail.com>